--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ h3 { font-size : 18px; margin : 8; padding : 0; }
 body { padding : 0; font-family : Arial; font-size : 16px; background-color : #fff; }
 .title { width : 700px; margin : 20px auto; }
 .container { width : 900px; margin : 20px auto; border-radius: 10px;  background-color : #fff; padding : 20px;  clear:both;}
+.container_inline { display: inline-block; width : 900px; margin : 20px auto; border-radius: 10px;  background-color : #fff; padding : 20px;  clear:both;}
 #bio {
     padding-top : 30px;
 }
@@ -71,13 +72,11 @@ a, a:visited { color : #0050e7; }
                 <a href="https://scholar.google.com/citations?user=SgbYgdsAAAAJ&hl=en" class="first" target="_blank" rel="nofollow">Google Scholar</a>|
                 <a href="https://github.com/saurabhsharma1993" target="_blank" rel="nofollow">GitHub</a>|
                 <a href="https://www.linkedin.com/in/saurabh-sharma-deeptinkerer/" target="_blank" rel="nofollow">LinkedIn</a>|
-                <br>
-                <br>
                 <a href="#sect-news" class="first">News</a>|
                 <a href="#sect-publications">Publications</a>|
                 <!-- <a href="#sect-awards">Awards</a> -->
-                <a href="#sect-reviewing">Reviewing</a>|
-                <a href="#sect-teaching">Teaching</a>
+                <a href="#sect-reviewing">Academic service</a>|
+                <a href="#sect-teaching">Teaching experience</a>
             </p>
         </div>
     </div>
@@ -86,18 +85,36 @@ a, a:visited { color : #0050e7; }
         <p>
             <h2>About me</h2>
             <br>
-            I'm a PhD student at the University of California Santa Barbara in beautiful Santa Barbara. My background is in Computer Science, and my interests lie in Computer Vision and more recently Graph Machine Learning. My research focuses on dataset imbalance, distribution shifts, and learning with limited data. I'm advised at UCSB by <a href="https://dynamo.cs.ucsb.edu/people/singh" target="_blank" rel="nofollow">Ambuj Singh</a>. Prior to this, I was in <a href="https://www.mpi-inf.mpg.de/departments/computer-vision-and-machine-learning/people/bernt-schiele/" target="_blank" rel="nofollow">Bernt Schiele's</a> Computer Vision and Machine Learning group at MPI Informatics, Saarbruecken, where I got my MSc in Computer Science. I also interned with <a href="https://arjunjain.co.in/" target="_blank" rel="nofollow">Arjun Jain's</a> 3D Vision group at IIT Bombay in the Summer of 2018.
-            <br>
-            <br>
-            <br>
-            <br>
-  
+            Doctoral candidate in Computer Science at the <a href="https://www.ucsb.edu/" target="_blank" rel="nofollow">University of California</a> in beautiful Santa Barbara, specializing in machine learning and network science. I have worked in various areas of machine learning including computer vision (CV), graph ML, natural language processing (NLP) and generative models. My experience spans both academic as well as industrial research in labs at <a href="https://rnd.iitb.ac.in/about_us" target="_blank" rel="nofollow">IITB</a>, <a href="https://www.mpi-inf.mpg.de/departments/computer-vision-and-machine-learning" target="_blank" rel="nofollow">MPI-Inf</a>, <a href="https://dynamo.cs.ucsb.edu/people/singh" target="_blank" rel="nofollow">UCSB</a>, and <a href="https://www.amazon.science/" target="_blank" rel="nofollow">Amazon</a>. My publications have been accepted at top ML conferences such as CVPR, ICCV, IJCAI, and the WebConf. I also have experience working on large-scale production systems at Fortune 500 companies such as <a href="https://www.goldmansachs.com/" target="_blank" rel="nofollow">Goldman Sachs</a> and <a href="https://www.microsoft.com/" target="_blank" rel="nofollow">Microsoft</a>. Outside of work, I can be found playing tabla or MTBing back-country in the Los Padres National Forest.
+            <br>  
         </p>
     </div>
 
     <div class="container">
         <p id="sect-news">
             <h2>News</h2>
+            <br>
+            [09/2025] I'm TAing the Introduction to Computational Science course offered in Fall 25 at UCSB.
+            <br>
+            [04/2025] I attended the <a href="https://www2025.thewebconf.org/" target="_blank" rel="nofollow">Web Conference</a>, 2025 in Sydney, NSW, Australia.
+            <br>
+            [03/2025] I successfully advanced towards doctoral candidacy for my PhD in Computer Science at UCSB.
+            <br>
+            [01/2025] Our work on <a href="https://arxiv.org/abs/2403.12399" target="_blank" rel="nofollow">Dynamic Gradient Influencing for Viral Marketing Using Graph Neural Networks</a> is accepted to the Web Conference, 2025.
+            <br>
+            [12/2024] I attended the <a href="https://neurips.cc/" target="_blank" rel="nofollow">Neural Information Processing Systems Conference (NeurIPS)</a>, 2024 in Vancouver, BC, Canada.
+            <br>
+            [08/2024] I TAed the Introduction to Computational Science course offered in Summer 24 at UCSB.
+            <br>
+            [04/2024] Our work on <a href="https://arxiv.org/abs/2403.12399" target="_blank" rel="nofollow">Dynamic Gradient Influencing for Viral Marketing Using Graph Neural Networks</a> is available as a preprint on ArXiv.
+            <br>
+            [09/2023] I finished another Applied Scientist internship at <a href="https://www.amazon.science/" target="_blank" rel="nofollow">Amazon Science</a>, San Diego.
+            <br>
+            [05/2023] I successfully passed my Major Area Examination towards my PhD in Computer Science at UCSB.
+            <br>
+            [04/2023] Our work on <a href="https://arxiv.org/abs/2302.00491" target="_blank" rel="nofollow">Learning Prototype Classifiers for Long-Tailed Recognition</a> is accepted to the International Joint Conference on Artificial Intelligence (IJCAI), 2023.
+            <br>
+            [04/2023] My research is funded by the <a href="https://action.ucsb.edu/research" target="_blank" rel="nofollow">NSF Agent-Centric Threat Intelligence and Operation (Action) AI Institute</a> hosted by UCSB.
             <br>
             [02/2023] Our work on <a href="https://arxiv.org/abs/2302.00491" target="_blank" rel="nofollow">Learning Prototype Classifiers for Long-Tailed Recognition</a> is available as a preprint on ArXiv.
             <br>
@@ -145,6 +162,33 @@ a, a:visited { color : #0050e7; }
                 <table><tbody>
                     <tr>
                         <td>
+                            <img src="./homepage_files/logo_dynviralmarket.png" class="publogo" width="300 px">
+                        </td>
+                        <td>
+                            <strong>
+                                Dynamic Gradient Influencing for Viral Marketing Using Graph Neural Networks
+                            </strong>
+                            <br>
+                            <br>
+                            <b><u>Saurabh Sharma</u></b>, Ambuj Singh
+                            <br>
+                            <br>
+                            <em>WebConf-25</em>
+                            <br>
+                            <br>
+                            <span class="links">
+                                <a href="https://arxiv.org/abs/2403.12399" target="_blank" rel="nofollow">pdf</a>
+                                <a href="https://github.com/saurabhsharma1993/dynamic_viral_marketing" target="_blank" rel="nofollow">code</a>
+                            </span>
+                        </td>
+                    </tr>
+                </tbody></table>
+            </div>
+            <br>
+            <div class="publication">
+                <table><tbody>
+                    <tr>
+                        <td>
                             <img src="./homepage_files/logo_prototypecls.png" class="publogo" width="300 px">
                         </td>
                         <td>
@@ -156,11 +200,12 @@ a, a:visited { color : #0050e7; }
                             <b><u>Saurabh Sharma</u></b>, Yongqin Xian, Ning Yu, Ambuj Singh
                             <br>
                             <br>
-                            <em>ArXiv Preprint</em>
+                            <em>IJCAI-23</em>
                             <br>
                             <br>
                             <span class="links">
                                 <a href="https://arxiv.org/abs/2302.00491" target="_blank" rel="nofollow">pdf</a>
+                                <a href="https://github.com/saurabhsharma1993/prototype-classifier-ltr" target="_blank" rel="nofollow">code</a>
                             </span>
                         </td>
                     </tr>
@@ -250,9 +295,9 @@ a, a:visited { color : #0050e7; }
             <br>
         </p>
 
-    <div class="container">
+    <div class="container_inline">
         <p id="sect-reviewing">
-            <h2>Reviewing</h2>
+            <h2>Academic service</h2>
             <br>
             <div>
                 <table><tbody>
@@ -282,9 +327,9 @@ a, a:visited { color : #0050e7; }
         </div>
     </p>
 
-    <div class="container">
+    <div class="container_inline">
         <p id="sect-teaching">
-            <h2>Teaching</h2>
+            <h2>Teaching experience</h2>
             <br>
             <div>
                 <b>University of California Santa Barbara</b>
