--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@ h3 { font-size : 18px; margin : 8; padding : 0; }
 body { padding : 0; font-family : Arial; font-size : 16px; background-color : #fff; }
 .title { width : 700px; margin : 20px auto; }
 .container { width : 900px; margin : 20px auto; border-radius: 10px;  background-color : #fff; padding : 20px;  clear:both;}
-.container_inline { display: inline-block; width : 900px; margin : 20px auto; border-radius: 10px;  background-color : #fff; padding : 20px;  clear:both;}
+/* .container_inline { display: inline-block; width : 900px; margin : 20px auto; border-radius: 10px;  background-color : #fff; padding : 20px;  clear:both;} */
+.container_inline{
+      display: inline-block;
+      width: 40%;
+      padding: 30px;
+      border: 1px solid black;
+      margin: 5px;
+      vertical-align: top;
+    }
 #bio {
     padding-top : 30px;
 }
@@ -73,6 +81,7 @@ a, a:visited { color : #0050e7; }
                 <a href="https://github.com/saurabhsharma1993" target="_blank" rel="nofollow">GitHub</a>|
                 <a href="https://www.linkedin.com/in/saurabh-sharma-deeptinkerer/" target="_blank" rel="nofollow">LinkedIn</a>|
                 <a href="#sect-news" class="first">News</a>|
+                <br>
                 <a href="#sect-publications">Publications</a>|
                 <!-- <a href="#sect-awards">Awards</a> -->
                 <a href="#sect-reviewing">Academic service</a>|
@@ -85,9 +94,8 @@ a, a:visited { color : #0050e7; }
         <p>
             <h2>About me</h2>
             <br>
-            Doctoral candidate in Computer Science at the <a href="https://www.ucsb.edu/" target="_blank" rel="nofollow">University of California</a> in beautiful Santa Barbara, specializing in machine learning and network science. I have worked in various areas of machine learning including computer vision (CV), graph ML, natural language processing (NLP) and generative models. My experience spans both academic as well as industrial research in labs at <a href="https://rnd.iitb.ac.in/about_us" target="_blank" rel="nofollow">IITB</a>, <a href="https://www.mpi-inf.mpg.de/departments/computer-vision-and-machine-learning" target="_blank" rel="nofollow">MPI-Inf</a>, <a href="https://dynamo.cs.ucsb.edu/people/singh" target="_blank" rel="nofollow">UCSB</a>, and <a href="https://www.amazon.science/" target="_blank" rel="nofollow">Amazon</a>. My publications have been accepted at top ML conferences such as CVPR, ICCV, IJCAI, and the WebConf. I also have experience working on large-scale production systems at Fortune 500 companies such as <a href="https://www.goldmansachs.com/" target="_blank" rel="nofollow">Goldman Sachs</a> and <a href="https://www.microsoft.com/" target="_blank" rel="nofollow">Microsoft</a>. Outside of work, I can be found playing tabla or MTBing back-country in the Los Padres National Forest.
+            Doctoral candidate in Computer Science at the <a href="https://www.ucsb.edu/" target="_blank" rel="nofollow">University of California</a> in beautiful Santa Barbara, specializing in machine learning and network science. I have worked in various areas of machine learning including computer vision (CV), graph ML, natural language processing (NLP) and generative models. My experience spans both academic as well as industrial research in labs at <a href="https://rnd.iitb.ac.in/about_us" target="_blank" rel="nofollow">IITB</a>, <a href="https://www.mpi-inf.mpg.de/departments/computer-vision-and-machine-learning" target="_blank" rel="nofollow">MPII</a>, <a href="https://dynamo.cs.ucsb.edu/people/singh" target="_blank" rel="nofollow">UCSB</a>, and <a href="https://www.amazon.science/" target="_blank" rel="nofollow">Amazon</a>. My publications have been accepted at top ML conferences such as CVPR, ICCV, IJCAI, and the WebConf. I also have experience working on large-scale production systems at Fortune 500 companies such as <a href="https://www.goldmansachs.com/" target="_blank" rel="nofollow">Goldman Sachs</a> and <a href="https://www.microsoft.com/" target="_blank" rel="nofollow">Microsoft</a>. Outside of work, I can be found playing tabla or MTBing back-country in the Los Padres National Forest.
             <br>  
-        </p>
     </div>
 
     <div class="container">
@@ -114,7 +122,7 @@ a, a:visited { color : #0050e7; }
             <br>
             [04/2023] Our work on <a href="https://arxiv.org/abs/2302.00491" target="_blank" rel="nofollow">Learning Prototype Classifiers for Long-Tailed Recognition</a> is accepted to the International Joint Conference on Artificial Intelligence (IJCAI), 2023.
             <br>
-            [04/2023] My research is funded by the <a href="https://action.ucsb.edu/research" target="_blank" rel="nofollow">NSF Agent-Centric Threat Intelligence and Operation (Action) AI Institute</a> hosted by UCSB.
+            [04/2023] My research is funded by the <a href="https://action.ucsb.edu/research" target="_blank" rel="nofollow">NSF Agent-Centric Threat Intelligence and Operation (Action) AI Institute</a>.
             <br>
             [02/2023] Our work on <a href="https://arxiv.org/abs/2302.00491" target="_blank" rel="nofollow">Learning Prototype Classifiers for Long-Tailed Recognition</a> is available as a preprint on ArXiv.
             <br>
@@ -151,7 +159,6 @@ a, a:visited { color : #0050e7; }
             [06/2019] We presented our work <a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Xian_F-VAEGAN-D2_A_Feature_Generating_Framework_for_Any-Shot_Learning_CVPR_2019_paper.pdf" target="_blank" rel="nofollow">f-vaegan-d2: A feature generating framework for any-shot learning</a> at the Computer Vision and Pattern Recognition (CVPR) conference, 2019 in Long Beach, California, USA.
             <br>
             [03/2019] Our work <a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Xian_F-VAEGAN-D2_A_Feature_Generating_Framework_for_Any-Shot_Learning_CVPR_2019_paper.pdf" target="_blank" rel="nofollow">f-vaegan-d2: A feature generating framework for any-shot learning</a> is accepted to the Computer Vision and Pattern Recognition (CVPR) conference, 2019.
-        </p>
     </div>
 
     <div class="container">
@@ -293,7 +300,6 @@ a, a:visited { color : #0050e7; }
                 </tbody></table>
             </div>
             <br>
-        </p>
 
     <div class="container_inline">
         <p id="sect-reviewing">
@@ -325,7 +331,7 @@ a, a:visited { color : #0050e7; }
                 </tbody></table>
             </div>
         </div>
-    </p>
+
 
     <div class="container_inline">
         <p id="sect-teaching">
@@ -345,6 +351,6 @@ a, a:visited { color : #0050e7; }
                 <br>
             </div>
         </div>
-    </p>
+    </div>
 
 </body></html>
